--- a/src/app/create-poll-component/create-poll-component.component.html
+++ b/src/app/create-poll-component/create-poll-component.component.html
@@ -1,11 +1,11 @@
-<div className="Container">
+<div class="Container">
     <img src="assets/flat_logo.png" alt="Logo Simba" height="50px" [ngStyle]="{ 'marginBottom': '1rem' }"/>
 
     <div class="card">
         <p-toast></p-toast>
-        <p-steps [model]="items" [readonly]="true"></p-steps>
+        <p-steps [model]="items" [readonly]="false" [(activeIndex)]="step"></p-steps>
     </div>
-    <div class="stepsdemo-content">
+    <div  [hidden]="step!=0" class="stepsdemo-content">
         <p-card>
             <ng-template pTemplate="title">
                 Informations
@@ -20,7 +20,7 @@
                         <input #titre="ngModel" id="titre" type="text" required pInputText
                             [(ngModel)]="personalInformation.titre"
                             [ngClass]="{'p-invalid': (titre.invalid && submitted) || (titre.dirty && titre.invalid)}">
-                        <small *ngIf="(titre.invalid && submitted) || (titre.dirty && firstname.invalid)"
+                        <small *ngIf="(titre.invalid && submitted) || (titre.dirty && titre.invalid)"
                             class="p-error">Le titre est requis.</small>
                     </div>
                     <div class="p-field">
@@ -31,13 +31,13 @@
                         <small class="p-error" *ngIf="(lieu.invalid && submitted )|| (lieu.dirty && lieu.invalid)">Le
                             lieu est requis.</small>
                     </div>
-                  <!--  <div class="p-field">
+                   <div class="p-field">
                         <label for="desc">Description</label>
                         <textarea #desc="ngModel" id="desc"  required pInputTextarea
                             [(ngModel)]="personalInformation.desc"
-                            [ngClass]="{'p-invalid': (desc.invalid && submitted) || (desc.dirty && desc.invalid)}">
+                            [ngClass]="{'p-invalid': (desc.invalid && submitted) || (desc.dirty && desc.invalid)}"></textarea>
                         <small class="p-error" *ngIf="(desc.invalid && submitted) || (desc.dirty && desc.invalid)">La description est requise.</small>
-                    </div>-->
+                    </div>
                     <div class="p-field">
                         <label for="repas">Repas</label>
                         <p-inputSwitch [(ngModel)]="personalInformation.repas"></p-inputSwitch>
@@ -47,14 +47,47 @@
             </ng-template>
             <ng-template pTemplate="footer">
                 <div class="p-grid p-nogutter p-justify-end">
-                    <p-button label="Next" (onClick)="nextPage()" icon="pi pi-angle-right" iconPos="right"></p-button>
+                    <p-button [disabled]=true label="Back"  icon="pi pi-angle-left"></p-button>
+
+                    <p-button class="float-right" label="Next" (onClick)="nextPage()" icon="pi pi-angle-right" iconPos="right"></p-button>
                 </div>
             </ng-template>
         </p-card>
     </div>
-    <div class="stepsdemo-content">
-        <p-card>
-            <full-calendar [options]="options"></full-calendar>
+    <div *ngIf="step==1"  class="stepsdemo-content">
+      <p-card>
+      <ng-template pTemplate="content">
+
+            <full-calendar #calendar [options]="options"></full-calendar>
+      </ng-template>
+            <ng-template pTemplate="footer">
+              <div>
+                  <p-button label="Back" (onClick)="prevPage1()" icon="pi pi-angle-left"></p-button>
+                  <p-button class="float-right" label="Next" (onClick)="nextPage1()" icon="pi pi-angle-right" iconPos="right"></p-button>
+              </div>
+
+
+          </ng-template>
         </p-card>
     </div>
+    <div *ngIf="step==2"  class="stepsdemo-content">
+      <p-card>
+      <ng-template pTemplate="content">
+          Le sondage est créé. <BR>
+          Le lien pour participer est <a [href]="urlsondage" target="_blank">{{urlsondage}} </a>. <BR>
+          Le lien d'administration est <a [href]="urlsondageadmin" target="_blank">{{urlsondageadmin}}</a>.<BR>
+          Un salon a été créé de discussion pour cette réunion est accessible à cette adresse <a [href]="urlsalon" target="_blank">{{urlsalon}}</a>.<BR>
+        <!-- Un pad a été créé pour cette réunion <a [href]="urlpad" target="_blank">{{urlpad}}</a>.<BR>-->
+              <BR>
+      </ng-template>
+            <ng-template pTemplate="footer">
+              <div>
+                  <p-button label="Back" (onClick)="prevPage1()" icon="pi pi-angle-left"></p-button>
+              </div>
+
+
+          </ng-template>
+        </p-card>
+    </div>
+
 </div>
