--- a/src/app/admin-poll/admin-poll.component.html
+++ b/src/app/admin-poll/admin-poll.component.html
@@ -1,1 +1,74 @@
-<p>admin-poll works!</p>
+<div class="Container">
+  <img src="assets/flat_logo.png" alt="Logo Simba" height="50px" [ngStyle]="{ 'marginBottom': '1rem' }" />
+
+
+  <p-card>
+    <p-toast></p-toast>
+    <ng-template pTemplate="title">
+      <h1>{{poll?.title}}</h1>
+    </ng-template>
+    <ng-template pTemplate="subtitle">
+      <div class="Dates"><span>Créé il y a {{poll?.createdAt | dateago}}</span></div>
+    </ng-template>
+    <ng-template pTemplate="content">
+      <div class="Poll_Infos">
+        <p class="Poll_Location"><svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24"
+            fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"
+            class="feather feather-map-pin">
+            <path d="M21 10c0 7-9 13-9 13s-9-6-9-13a9 9 0 0 1 18 0z"></path>
+            <circle cx="12" cy="10" r="3"></circle>
+          </svg>{{poll?.location}}</p>
+        <div *ngIf="poll?.has_meal" class="Poll_Has_Meal"><svg class="feather" aria-hidden="true" width="20" height="20"
+            focusable="false" data-prefix="fas" data-icon="utensils" role="img" xmlns="http://www.w3.org/2000/svg"
+            viewBox="0 0 416 512">
+            <path fill="currentColor"
+              d="M207.9 15.2c.8 4.7 16.1 94.5 16.1 128.8 0 52.3-27.8 89.6-68.9 104.6L168 486.7c.7 13.7-10.2 25.3-24 25.3H80c-13.7 0-24.7-11.5-24-25.3l12.9-238.1C27.7 233.6 0 196.2 0 144 0 109.6 15.3 19.9 16.1 15.2 19.3-5.1 61.4-5.4 64 16.3v141.2c1.3 3.4 15.1 3.2 16 0 1.4-25.3 7.9-139.2 8-141.8 3.3-20.8 44.7-20.8 47.9 0 .2 2.7 6.6 116.5 8 141.8.9 3.2 14.8 3.4 16 0V16.3c2.6-21.6 44.8-21.4 48-1.1zm119.2 285.7l-15 185.1c-1.2 14 9.9 26 23.9 26h56c13.3 0 24-10.7 24-24V24c0-13.2-10.7-24-24-24-82.5 0-221.4 178.5-64.9 300.9z">
+            </path>
+          </svg>
+          Cet évènement contient un repas
+        </div>
+      </div>
+
+      <div>
+        <div >
+                <div class="container-fluid">
+            <div class="table-responsive-sm card">
+            <table class="table">
+            <thead>
+              <tr>
+                <th rowspan="2"></th>
+                <th *ngFor="let ev of events" class="text-light" style="text-align: center;background-color: #545B62">{{ev.start | date:'EEEE d LLLL': 'CEST':'fr'}}</th>
+              </tr>
+              <tr>
+                <th *ngFor="let ev of events" style="text-align: center">{{ev.start | date:'H:mm'}} <BR>-<BR> {{ev.end | date:'H:mm'}}</th>
+              </tr>
+              <tr>
+                <th><span>{{uniqueUsers.length}} participant</span><span *ngIf="uniqueUsers.length > 1">s</span></th>
+                <th *ngFor="let pc of poll?.pollChoices" style="text-align: center">{{pc.users.length}}</th>
+              </tr>
+
+          </thead>
+            <tbody>
+              <tr *ngFor="let u of userChoices | keyvalue">
+                <td><input type="text" [disabled]='true' pInputText [ngModel]="uniqueUsers | usernamePipe:u.key"></td>
+                <td *ngFor="let ev of events"  style="text-align: center"><p-checkbox  [disabled]='true' [binary]="true" [ngModel]="u.value | selecteddate4userPipe:u.key:ev" ></p-checkbox></td>
+              </tr>
+
+              <tr>
+                <td></td>
+                <td *ngFor="let ev of events" style="text-align: center"><p-button   (onClick)="selectEvent($event,ev )"  >sélectionner cette date</p-button></td>
+              </tr>
+            </tbody>
+          </table>
+          </div>
+          </div>
+        </div>
+
+      </div>
+    </ng-template>
+    <ng-template pTemplate="footer">
+
+
+    </ng-template>
+  </p-card>
+</div>
