--- a/src/app/answer-poll/answer-poll.component.html
+++ b/src/app/answer-poll/answer-poll.component.html
@@ -45,6 +45,14 @@
           <small class="p-error" *ngIf="(mail.invalid && submitted )|| (mail.dirty && mail.invalid)">Le
             mail est requis.</small>
         </div>
+        <div class="p-field">
+          <p style="font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Helvetica, Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol'; font-size: 1rem;font-weight: normal;">Avez vous un agenda avec un flux ics accessible ?</p>
+          <p-inputSwitch [(ngModel)]="hasics"></p-inputSwitch>
+        </div>
+        <div *ngIf="hasics" class="p-field">
+          <label for="ics">URL ICS du participant</label>
+          <input #mail="ngModel" id="ics" type="text"  pInputText (change)="getICS()" [(ngModel)]="personalInformation.ics">
+        </div>
         <div *ngIf="poll?.has_meal" class="p-field">
           <label for="repas">Avez vous des préférences alimentaires ?</label>
           <p-inputSwitch [(ngModel)]="personalInformation.pref"></p-inputSwitch>
@@ -146,3 +154,11 @@
     </ng-template>
   </p-card>
 </div>
+
+
+
+
+<!--<p-button (onClick)="testEvent()">test</p-button>-->
+<!-- Modal -->
+
+
