--- a/src/app/answer-poll/answer-poll.component.html
+++ b/src/app/answer-poll/answer-poll.component.html
@@ -41,10 +41,15 @@
         </div>
         <div class="p-field">
           <label for="mail">Email participant</label>
-          <input #mail="ngModel" id="mail" type="email" required pInputText [(ngModel)]="personalInformation.mail"
+          <span class="p-input-icon-right">
+            <i *ngIf="loademail" class="pi pi-spin pi-spinner" ></i>
+
+          <input #mail="ngModel" id="mail" type="email" required pInputText (change)="getUserFromMail()" [(ngModel)]="personalInformation.mail"
             [ngClass]="{'p-invalid': (mail.invalid && submitted) || (mail.dirty && mail.invalid)}">
+          </span>
           <small class="p-error" *ngIf="(mail.invalid && submitted )|| (mail.dirty && mail.invalid)">Le
             mail est requis.</small>
+
         </div>
         <div class="p-field">
           <p style="font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Helvetica, Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol'; font-size: 1rem;font-weight: normal;">Avez vous un agenda avec un flux ics accessible ?</p>
@@ -52,7 +57,10 @@
         </div>
         <div *ngIf="hasics" class="p-field">
           <label for="ics">URL ICS du participant</label>
-          <input #mail="ngModel" id="ics" type="text"  pInputText (change)="getICS()" [(ngModel)]="personalInformation.ics">
+          <span class="p-input-icon-right">
+            <i *ngIf="loadics" class="pi pi-spin pi-spinner" ></i>
+            <input #mail="ngModel" id="ics" type="text"  pInputText (change)="getICS()" [(ngModel)]="personalInformation.ics">
+          </span>
         </div>
         <div *ngIf="poll?.has_meal" class="p-field">
           <p style="font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Helvetica, Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol'; font-size: 1rem;font-weight: normal;">Avez vous des préférences alimentaires ?</p>
@@ -125,6 +133,8 @@
 
     </ng-template>
     <ng-template pTemplate="footer">
+    <app-show-comments  *ngIf="poll" [comments]="comments"></app-show-comments>
+
       <div class="p-fluid">
         <div class="p-field">
           <label for="comment">Auteur du commentaire associé à ce sondage</label>
@@ -146,7 +156,6 @@
           <p-button [disabled]="commentsoumis" label="Ajouter commentaire" (onClick)="createComment()"
             icon="pi pi-angle-left"></p-button>
         </div>
-
 
 
       </div>
