--- a/src/app/create-poll-component/create-poll-component.component.html
+++ b/src/app/create-poll-component/create-poll-component.component.html
@@ -61,6 +61,20 @@
     <div *ngIf="step==1"  class="stepsdemo-content">
       <p-card>
       <ng-template pTemplate="content">
+        <div class="p-fluid">
+
+        <div class="p-field">
+          <p style="font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Helvetica, Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol'; font-size: 1rem;font-weight: normal;">Avez vous un agenda avec un flux ics accessible ?</p>
+          <p-inputSwitch [(ngModel)]="hasics"></p-inputSwitch>
+        </div>
+        <div *ngIf="hasics" class="p-field">
+          <label for="ics">URL ICS du participant</label>
+          <span class="p-input-icon-right">
+            <i *ngIf="loadics" class="pi pi-spin pi-spinner" ></i>
+            <input #mail="ngModel" id="ics" type="text"  pInputText (change)="getICS()" [(ngModel)]="ics">
+          </span>
+        </div>
+      </div>
 
             <full-calendar #calendar [options]="options"></full-calendar>
       </ng-template>
@@ -81,7 +95,7 @@
           Le lien pour participer est <a [href]="urlsondage" target="_blank">{{urlsondage}} </a>. <BR>
           Le lien d'administration est <a [href]="urlsondageadmin" target="_blank">{{urlsondageadmin}}</a>.<BR>
           Un salon a été créé de discussion pour cette réunion est accessible à cette adresse <a [href]="urlsalon" target="_blank">{{urlsalon}}</a>.<BR>
-        <!-- Un pad a été créé pour cette réunion <a [href]="urlpad" target="_blank">{{urlpad}}</a>.<BR>-->
+          <span *ngIf="urlpad">Un pad a été créé pour cette réunion <a [href]="urlpad" target="_blank">{{urlpad}}</a>.</span><BR>
               <BR>
       </ng-template>
             <ng-template pTemplate="footer">
